apps/base/keycloak/middleware-tailscale.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tailscale-only
  namespace: keycloak
spec:
  ipAllowList:
    sourceRange:
      - 100.64.0.0/10
