apps/base/keycloak/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tailscale-only
  namespace: keycloak
spec:
  ipAllowList:
    sourceRange:
      - 100.64.0.0/10
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-ratelimit
  namespace: keycloak
spec:
  rateLimit:
    average: 10
    burst: 20
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-headers
  namespace: keycloak
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    contentTypeNosniff: true
    browserXssFilter: true
    frameDeny: true
    referrerPolicy: strict-origin-when-cross-origin
